# license-generator

./: CMakeLists.txt  license-generator.pro  license.cpp  license.h  main.cpp
src/: license.cpp  license.h
src/ui/: main.qml
